<resources>
    <string name="app_name">Films</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Search</string>
    <string name="tab_text_3">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group">GroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="profile_fragment_label">First Fragment</string>
    <string name="groups_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="auth">Авторизация</string>
    <string name="login">Почта</string>
    <string name="password">Пароль</string>
    <string name="make_acc">Создать аккаунт</string>
    <string name="forgetPass">Забыли пароль?</string>
    <string name="come">Войти</string>
    <string name="filmDesc">Здесь будет фильм</string>
    <string name="backbutton">BackButton</string>
    <string name="reg">Регистрация</string>
    <string name="okk">Подтвердить</string>
    <string name="name">Name</string>
    <string name="putName">Введите имя</string>
    <string name="e_mail">e-mail</string>
    <string name="mail">Mail</string>
    <string name="brainPass">Придумайте пароль</string>
    <string name="passwordReg">Пароль</string>
    <string name="passOneMore">Введите пароль ещё раз</string>
    <string name="nameAcc">Имя</string>
    <string name="email">Почта</string>
    <string name="date">Дата регистрации</string>
    <string name="save">Сохранить</string>
    <string name="myfirstgroup">   MyFirstGroup</string>
    <string name="id">id</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск друзей</string>
    <string name="your_groups">Твои группы</string>
    <string name="exit">Exit</string>
    <string name="choose_film">выбрать фильмы</string>

    <string-array name="searchBy">
        <item>Поиск по Почте(рекомендуется)</item>
        <item>Поиск по Имени</item>
        <item>Поиск по Id</item>
    </string-array>
</resources>